# VauMotoTool

./: Cargo.toml  LICENSE  README.md  define_settings
egui_plot-0.31.0/: .cargo_vcs_info.json  Cargo.toml
egui_plot-0.31.0/src/: transform.rs
src/: app.rs  app_plot.rs  compressor.rs  main.rs  rtmap.rs  udp.rs
test_generator/: udp-sender.py
